--- a/index.html
+++ b/index.html
@@ -19,24 +19,22 @@
                <th>Чистота</th>
                <th>Экология</th>
                <th>Питание</th>
-               <th>Активность</th>
+               <th>Актив</th>
             </tr>
-            <tr><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>2</td><td>0</td></tr>
-            <tr><td>3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>2</td><td>0</td></tr>
-            <tr><td>4</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>5</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>6</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>7</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>8</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>9</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>10</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>11</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>12</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td></tr>
-            <tr><td>13</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>14</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>15</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
-            <tr><td>16</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td></tr>
+            <tr><td class='number'>1</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>2</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>2</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>3</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>2</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>4</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>5</td><td class='leader'>0</td><td class='media'>1</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>6</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>7</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>8</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>9</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>10</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>11</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>12</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>1</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>13</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
+            <tr><td class='number'>14</td><td class='leader'>0</td><td class='media'>0</td><td class='clear'>0</td><td class='eco'>0</td><td class='food'>0</td><td class='activite'>0</td></tr>
        </table>
    </section>
    <div class="icon2"></div>
