--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
        <table class="section__table">
            <tr class="section__table_bar">
                <th>№</th>
-               <th>Лидерство</th>
+               <th>Лидер</th>
                <th>Медиа</th>
                <th>Чистота</th>
-               <th>Экология</th>
+               <th>Эколог</th>
                <th>Питание</th>
                <th>Актив</th>
             </tr>
