--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orlenok</title>
-    <link rel="stylesheet" href="../css/resettable.css">
-    <link rel="stylesheet" href="../source/scss-tools.css">
-    <link rel="stylesheet" href="../source/styles.css">
+    <link rel="stylesheet" href="/css/resettable.css">
+    <link rel="stylesheet" href="/source/scss-tools.css">
+    <link rel="stylesheet" href="/source/styles.css">
 </head>
 <body>
     <div class="icon"></div>
